# floe-runtime

./: .claudeignore  .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  BUG-REPORT-2025-12-31.md  CLAUDE.full.md  CLAUDE.md  E2E-VALIDATION-REPORT.md  E2E-VALIDATION-STATUS.md  E2E_VALIDATION_REPORT.md  LICENSE  Makefile  README.md  RESEARCH_FINDINGS.md  RESOLUTION_PLAN.md  TESTING.md  pyproject.toml  sonar-project.properties
.analysis/: dbt-iceberg-architecture.md  deployment-validation-2025-12-25.md  medallion-architecture-analysis.md  medallion-implementation-summary.md  phase4-completion-guide.md
.beads/: .gitignore  issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/agents/: docker-log-analyser.md  helm-debugger.md
.claude/commands/: compile.md  init-dev-env.md  k8s-debug.md  lineage.md  logs.md  speckit.checklist.md  speckit.implement.md  speckit.implementwithbeads.md  speckit.specify.md  speckit.taskstobeads.md  trace.md  traceability.md  validate.md
.claude/rules/: agent-delegation.md  component-ownership.md  context-efficient-logging.md  context-management.md  pydantic-contracts.md  python-standards.md  security.md  skill-invocation.md  sonarqube-quality.md  standalone-first.md
.claude/skills/: README.md
.githooks/: pre-commit  pre-push
.github/instructions/: aikido_rules.instructions.md
.github/workflows/: ci.yml  integration-tests.yml
.specify/memory/: constitution.md
charts/floe-cube/: Chart.yaml  values-local.yaml  values.yaml
charts/floe-dagster/: Chart.yaml  values-demo.yaml  values-external-secrets-vault.yaml  values-local.yaml  values-prod.yaml  values-sealed-secrets.yaml  values-sops.yaml  values.yaml
charts/floe-infrastructure/: values-local.yaml  values.yaml
charts/floe-runtime/: Chart.yaml  values.yaml
demo/: README.md  __init__.py  dbt_project.yml  profiles.yml
demo/data_engineering/: README.md  floe.yaml
demo/dbt/: profiles.yml
demo/models/: sources.yml
demo/orchestration/: __init__.py  config.py  definitions.py
demo/platform/: platform.yaml
demo/platform-config/: DEPLOYMENT-REQUIREMENTS.md  README.md
docker/: Dockerfile.cube  Dockerfile.dagster  Dockerfile.demo  entrypoint.sh
docs/: 00-overview.md  01-constraints.md  02-context.md  03-solution-strategy.md  04-building-blocks.md  05-runtime-view.md  06-deployment-view.md  07-crosscutting.md  07-infrastructure-provisioning.md  08-quality.md  09-integration.md  10-glossary.md  11-implementation-roadmap.md  12-ai-development.md  E2E-VALIDATION-STATUS.md  api-examples.md  data-engineer-quickstart.md  demo-quickstart.md  local-k8s-maintenance.md  opentelemetry-python-research.md  pipeline-config.md  platform-config.md  research-dbt-manifest-classification.md  research-openlineage-dagster-dbt-integration.md  secrets-management.md  security.md
docs/adr/: 0001-cube-semantic-layer.md  0002-two-tier-config.md
docs/architecture/: platform-deep-dive.md
docs/guides/: aws-account-setup.md
docs/research/: openlineage-python-sdk.md  structlog-opentelemetry-integration.md
docs/troubleshooting/: deployment-debugging.md
examples/environments/: README.md
k8s/: cleanup-cronjob.yaml
platform/: README.md
platform/dev/: platform.yaml
platform/k8s-local/: platform.yaml
platform/local/: platform.yaml
platform/prod/: platform.yaml
platform/staging/: .gitkeep
schemas/: floe-spec.schema.json  floe-spec.v1.0.0.schema.json  platform-spec.schema.json  platform-spec.v1.0.0.schema.json
scripts/: README.md  apply-timezone-and-rebuild.sh  bootstrap.sh  check.sh  claude-cleanup.sh  clean-demo.sh  clean-deploy.sh  cleanup-local.sh  cleanup-s3.sh  deploy-local-clean.sh  deploy.sh  launch-dagster-job.sh  materialize-demo.sh  quickstart.sh  seed_iceberg_tables.py  validate-demo.sh  validate-e2e.sh
scripts/ci/: lint.sh  test.sh  typecheck.sh
scripts/cleanup/: all.sh  dagster.sh  marquez.sh  polaris.sh
scripts/dagster/: monitor-run.sh
scripts/deploy/: e2e.sh  local.sh  quickstart.sh
scripts/validate/: e2e.sh
specs/001-core-foundation/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-interface/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-orchestration-layer/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-storage-catalog/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-consumption-layer/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-integration-testing/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-deployment-automation/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-kubernetes-demo/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-two-tier-config/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-orchestration-auto-discovery/: .beads-mapping.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
testing/: __init__.py
testing/base_classes/: __init__.py  adapter_test_base.py  integration_test_base.py
testing/contracts/: __init__.py  boundary_tests.py
testing/docker/: Dockerfile.dagster  Dockerfile.test-runner  README.md  docker-compose.yml  env.example  spark-defaults.conf
testing/e2e/: README.md  VALIDATION_RESULTS.md  __init__.py  conftest.py  test_demo_flow.py
testing/fixtures/: __init__.py  artifacts.py  observability.py  services.py
testing/markers/: __init__.py
tests/: __init__.py  conftest.py  test_conftest_markers.py
(+244 files in other folders)
