[project]
name = "floe-runtime"
version = "0.1.0"
description = "Open-source data execution layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "black>=25.0",
    "isort>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "bandit>=1.8",
    "pip-audit>=2.8",
    "safety>=3.2",
    "pre-commit>=4.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["floe_core", "floe_cli", "floe_dagster", "floe_dbt", "floe_iceberg", "floe_polaris", "floe_cube"]

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["floe_core", "floe_cli", "floe_dagster", "floe_dbt", "floe_iceberg", "floe_polaris", "floe_cube"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/floe-core/tests",
    "packages/floe-cli/tests",
    "packages/floe-dagster/tests",
    "packages/floe-dbt/tests",
    "packages/floe-iceberg/tests",
    "packages/floe-polaris/tests",
    "packages/floe-cube/tests",
]
addopts = "--import-mode=importlib"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
