[project]
name = "floe-runtime"
version = "0.1.0"
description = "Open-source data execution layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "black>=25.0",
    "isort>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.120",
    "bandit>=1.8",
    "pip-audit>=2.8",
    "safety>=3.2",
    "pre-commit>=4.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["floe_core", "floe_cli", "floe_dagster", "floe_dbt", "floe_iceberg", "floe_polaris", "floe_cube", "testing"]

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
# Ignore missing imports for third-party libraries without type stubs
# (pyiceberg, pyarrow, dagster, structlog, opentelemetry, pandas)
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["floe_core", "floe_cli", "floe_dagster", "floe_dbt", "floe_iceberg", "floe_polaris", "floe_cube"]
# Align with isort's black profile for consistent sorting
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/floe-core/tests",
    "packages/floe-cli/tests",
    "packages/floe-dagster/tests",
    "packages/floe-dbt/tests",
    "packages/floe-iceberg/tests",
    "packages/floe-polaris/tests",
    "packages/floe-cube/tests",
]
addopts = "--import-mode=importlib"
filterwarnings = [
    "error",
    # PyIceberg uses deprecated Pydantic patterns (model_validator with classmethod)
    # We can't fix this upstream - it's in pyiceberg itself
    "ignore:Using `@model_validator`:pydantic.warnings.PydanticDeprecatedSince212:pyiceberg",
    # PyIceberg OAuth2 endpoint deprecation warning - temporary until PyIceberg 1.0
    # See: https://github.com/apache/iceberg/issues/10537
    "ignore:Deprecated in 0.8.0.*oauth2-server-uri:DeprecationWarning",
    # PyIceberg falls back to pure Python Avro decoder when Cython is not available
    # This is expected in container environments without compiled extensions
    "ignore:Falling back to pure Python Avro decoder:UserWarning",
    # PyIceberg overwrite on empty table raises a warning (not an error)
    "ignore:Delete operation did not match any records:UserWarning",
    # Dagster context.metadata deprecation - use definition_metadata in 2.0
    # This is in dagster library code, not our code
    "ignore:Property `OutputContext.metadata` is deprecated:DeprecationWarning",
    "ignore:Property `InputContext.metadata` is deprecated:DeprecationWarning",
    "ignore:Parameter `metadata` of function `build_input_context` is deprecated:DeprecationWarning",
    "ignore:Parameter `metadata` of function `build_output_context` is deprecated:DeprecationWarning",
]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "contract: marks tests as contract tests for cross-package validation",
    "e2e: marks tests as end-to-end tests",
    "adapter: marks tests for a specific compute adapter (use with parameter)",
    "requires_dbt: marks tests that require dbt-core to be installed",
    "requires_container: marks tests that require Docker containers",
]

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
